# nimbusU

./: .gitignore  .gitmodules  README.md  TODO.md  docker-compose.yml  requirements.md
NimbusU-backend/: .gitignore  README.md  manage.py  pyproject.toml  schema.yaml
NimbusU-backend/apps/academics/: admin.py  models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/academics/migrations/: 0001_initial.py  0002_initial.py  0003_school_department_school.py  0004_academicevent.py  0005_program_credit_limit_courseprerequisite_grade.py  0006_course_deleted_at_course_is_deleted.py
NimbusU-backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/accounts/migrations/: 0001_initial.py  0002_studentprofile_batch_studentprofile_division_and_more.py  0003_add_dean_head_roles.py  0005_user_deleted_at_user_is_deleted.py  0006_userpreferences.py
NimbusU-backend/apps/assignments/: admin.py  models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/assignments/migrations/: 0001_initial.py  (+3 more)
NimbusU-backend/apps/common/: models.py
NimbusU-backend/apps/communications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
NimbusU-backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/telemetry/: models.py  serializers.py  urls.py  views.py
NimbusU-backend/apps/timetable/: admin.py  models.py  serializers.py  urls.py  views.py
NimbusU-backend/nimbusu/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API.md  userflows.md
(+63 files in other folders)
